# guru

./: README.md  docker-compose.prod.yml  docker-compose.yml  package.json  prettier.config.js
.github/workflows/: deploy.yml
ai/: .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml
ai/app/: main.py
ai/app/chat/: chat_controller.py  chat_service.py
ai/app/chat/dto/: ChatRequestDto.py  ChatResponseDto.py
ai/app/chat/tools/: search_courses.py
ai/app/course/: course_service.py
ai/app/course/dto/: CourseDto.py
ai/app/llm/: llm_service.py
ai/app/recommendations/: recommendations_controller.py  recommendations_service.py
ai/app/recommendations/dto/: RecommendationRequestDto.py
ai/app/recommendations/models/: RecommendationRequest.py
ai/app/utils/: client.py  prompt_builder.py  server.py
back-end/: .gitignore  Dockerfile  Dockerfile.prod  package-lock.json  package.json
back-end/src/: app.controller.ts  app.module.ts  app.util.ts  main.ts
back-end/src/ai/: ai.controller.ts  ai.module.ts  ai.service.ts
back-end/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts
back-end/src/course/: course-seeder.service.ts  course.controller.ts  course.entity.ts  course.module.ts  course.service.ts  seed-data.ts
back-end/src/course-view/: course-view.entity.ts  course-view.module.ts
back-end/src/enrollment/: enrollment.controller.ts  (+3 more)
front-end/: .gitignore  Dockerfile  Dockerfile.prod  components.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
front-end/src/: App.tsx  main.tsx
(+86 files in other folders)
