[tool.poetry]
name = "guru-ai"
version = "0.1.0"
description = ""
authors = ["dudwns0921 <dudwns0921@gmail.com>"]

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
python-dotenv = "^1.1.1"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
openai = "^1.98.0"
langchain-openai = "^0.3.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
